# nntl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  ChangeLog.md  LICENSE  README.md  cleanup.bat  nntl.sln  todo.md  vcpkg.json
examples/: ReadMe.md  ReadMe.txt  examples.cpp  examples.vcxproj  examples.vcxproj.filters  simple.cpp  stdafx.cpp  stdafx.h  targetver.h
include/: CMakeLists.txt
include/nntl/: CMakeLists.txt  _SNN_common.h  _defs.h  activation.h  common.h  common_nn_data.h  compiler.h  dropout.h  errors.h  interfaces.h  layers.h  math_details.h  nnet.h  nnet_evaluator.h  nnet_train_opts.h  nntl.h  train_data.h  training_observer.h  utils.h  weights_init.h
include/nntl/_supp/: _about.txt
include/nntl/_supp/io/: binfile.h  jsonreader.h  matfile.h
include/nntl/_supp/matlab/: export_2bin.m  td2json_file.m
include/nntl/_test/: functions.h  test.h  test_weights_init.h
include/nntl/_uml_converter/: layer_type2string.m  static_layer_types.m
include/nntl/activations/: _i_activation.h  _loss_parts.h  elogu.h  elu.h  identity.h  loglogu.h  logu.h  relu_family.h  selu.h  sigm.h  softmax.h  softsigm.h  softsign.h  step.h
include/nntl/dropout/: _base.h  alpha_dropout.h  dropout.h
include/nntl/grad_works/: ILR.h  ILR_Props.h  grad_works.h  loss_addendums.h
include/nntl/interface/: _i_bgworkers.h  _i_imemmgr.h  _i_inspector.h  _i_math.h  _i_rng.h  _i_threads.h
include/nntl/interface/imemmgr/: imemmgr.h
include/nntl/interface/inspectors/: dummy.h  dumper.h  gradcheck.h  stdcout.h
include/nntl/interface/math/: _base.h  _mcwFindKOrdered_hlpr.h  mathn.h  mathn_mt.h  mathn_thr.h  smath.h  smath_thr.h  smatrix.h
include/nntl/interface/math/bindings/: b_acml.h  b_open_blas.h
include/nntl/interface/mt_dispatcher/: mt_dispatcher.h  profiler.h
include/nntl/interface/rng/: afrand.h  afrand_as.h  afrand_mt.h  afrand_mt_thr.h  cstd.h
include/nntl/interface/threads/: _sync_primitives.h  bgworkers.h  parallel_range.h  prioritize_workers.h  workers.h
include/nntl/layer/: _activation_storage.h  _activation_wrapper.h  _init_layers.h  _layer_base.h  _lph_base.h  _pack_.h  _pack_traits.h  _penalized_activations_base.h  _tuple_utils.h  extender.h  extensions.h  fully_connected.h  identity.h  input.h  output.h  pack_horizontal.h  pack_horizontal_optional.h  pack_tile.h  pack_vertical.h
include/nntl/loss_addendum/: DeCov.h  L1.h  L2.h  _i_loss_addendum.h
include/nntl/serialization/: options.h  serialization.h
include/nntl/train_data/: _i_train_data.h  _td_base.h  _td_norm.h  _train_data_simple.h  inmem_train_data.h  inmem_train_data_stor.h  seq_data.h  transf_train_data.h
include/nntl/utils/: bwlist.h  call_wrappers.h  chrono.h  confusion_mtx.h  data_buffer.h  denormal_floats.h  epochs_props.h  forwarder.h  gradcheck.h  lambdas.h  layers_settings.h  matlab.h  mixins.h  mtx2Normal.h  options.h  own_or_use_ptr.h  scope_exit.h  tictoc.h  vector_conditions.h
include/nntl/weights_init/: LsuvExt.h  static.h
maintenance/cmake/: basics.cmake  generic_compiler_setup.cmake  option_list.cmake  setup_vcpkg.cmake  test_utils.cmake
maintenance/scripts/: .gitignore  clean_build.sh  common-buildreqs.sh  format-c++.sh  setup_vcpkg.sh
matlab/uml_converter/: convertVPxml.m  isLayerTypeCompound.m  layers2cpp.xsl  parseStereotype.m  repairGraph.m  string2layer_type.m
nntl/: ChangeLog.md  _SNN_common.h  _defs.h  _layer_base.h  _nnet_errs.h  activation.h  common.h  common_nn_data.h  dropout.h  errors.h  grad_works.h  interfaces.h  layer_fully_connected.h  layer_input.h  layer_output.h  layers.h  layers_pack.h  math.h  nnet.h  nnet_cond_epoch_eval.h  nnet_def_interfaces.h  nnet_evaluator.h  nnet_train_opts.h  nntl.h  train_data.h  training_observer.h  utils.h  weights_init.h
nntl/_supp/: binfile.h  jsonreader.h
nntl/_test/: functions.h  test.h  test_weights_init.h
nntl/_uml_converter/: VPxml2graph.m  convertVPxml.m  convertVPxmlFolder.m  graph2xml.m  layer_type2string.m  layers2cpp.xsl  repairGraph.m  static_codegen_defs.m  string2dropoutType.m  string2layer_type.m  string2lossAddendum.m
nntl/activations/: _i_activation.h  _loss_parts.h  elogu.h  elu.h  identity.h  linear.h  loglogu.h  relu_family.h  selu.h  sigm.h  softmax.h  softsigm.h  softsign.h  step.h
nntl/dropout/: _base.h  alpha_dropout.h  dropout.h
nntl/grad_works/: ILR.h  ILR_Props.h  grad_works.h  loss_addendums.h
nntl/interface/: _i_asynch.h  _i_bgworkers.h  _i_inspector.h  _i_math.h  _i_rng.h  _i_threads.h  i_inspector.h  math.h  (+3 more)
tests/: CMakeLists.txt  ReadMe.txt  asserts.h  common_routines.cpp  common_routines.h  etalons.h  imath_etalons.cpp  imath_etalons.h  nn_base_arch.h  simple_math_etalons.cpp  simple_math_etalons.h  stdafx.cpp  stdafx.h  targetver.h  test_activations.cpp  test_b_open_blas.cpp  test_b_yeppp.cpp  test_binfile.cpp  test_i_yeppp_openblas.cpp  test_imath_basic.cpp  test_imath_basic_thr.cpp  test_inspectors.cpp  test_jsonreader.cpp  test_layer_pack_gated.cpp  test_layer_pack_horizontal.cpp  test_layer_pack_horizontal_gated.cpp  test_layer_pack_horizontal_optional.cpp  test_layer_pack_tile.cpp  test_layer_pack_vertical.cpp  test_layer_penalized_activations.cpp  test_matfile.cpp  test_nnet.cpp  test_perf_decisions.cpp  test_rng.cpp  test_selu.cpp  test_simple_math.cpp  test_simple_math_thr.cpp  test_simple_matrix.cpp  test_threading.cpp  test_util.cpp  (+3 more)
tests/include/: asserts.h  common.h  common_routines.h  nn_base_arch.h  simple_math_etalons.h  targetver.h
tests/src/: stdafx.cpp  test_activations.cpp  test_b_open_blas.cpp  test_binfile.cpp  test_imath_basic.cpp  test_imath_basic_thr.cpp  test_inspectors.cpp  test_jsonreader.cpp  test_layer_pack_horizontal.cpp  test_layer_pack_horizontal_optional.cpp  test_layer_pack_tile.cpp  test_layer_pack_vertical.cpp  test_matfile.cpp  test_perf_decisions.cpp  test_rng.cpp  test_selu.cpp  test_simple_math.cpp  test_simple_math_thr.cpp  test_simple_matrix.cpp  test_threading.cpp  test_util.cpp  tests.cpp
tests/test_data/: mtx3-2.json  mtx4-2.json  mtx4-3.json  mtxmul_m1.json  mtxmul_m2.json  mtxmul_m3.json  traindata.json
(+125 files in other folders)
